istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-vs
spec:
  hosts:
  - "93.183.71.214"
  gateways:
  - todo-gateway
  http:
  - route:
    - destination:
        host: todo-backend
        port:
          number: 8000
